components/jellyfin/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: nixos-mini2
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8096
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: web
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: web
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: web
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: media
          persistentVolumeClaim:
            claimName: syncthing-video
            readOnly: true
