components/jellyfin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
    - name: web
      port: 8096
      nodePort: 30004
      targetPort: web
      protocol: TCP
